feat: Выполнить ФЗ-15. Добавлена работа с БД, реализованы функции бронирования и отзывов. Переработана архитектура проекта